--- a/scholarBowlScorer/pom.xml
+++ b/scholarBowlScorer/pom.xml
@@ -22,5 +22,15 @@
   		<artifactId>jxls</artifactId>
   		<version>2.4.3</version>
   	</dependency>
+  	<dependency>
+  		<groupId>org.jxls</groupId>
+  		<artifactId>jxls-jexcel</artifactId>
+  		<version>1.0.6</version>
+  	</dependency>
+  	<dependency>
+  		<groupId>org.jxls</groupId>
+  		<artifactId>jxls-poi</artifactId>
+  		<version>1.0.14</version>
+  	</dependency>
   </dependencies>
 </project>
