--- a/scholarBowlScorer/pom.xml
+++ b/scholarBowlScorer/pom.xml
@@ -17,20 +17,10 @@
     </plugins>
   </build>
   <dependencies>
-  	<dependency>
-  		<groupId>org.jxls</groupId>
-  		<artifactId>jxls</artifactId>
-  		<version>2.4.3</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jxls</groupId>
-  		<artifactId>jxls-jexcel</artifactId>
-  		<version>1.0.6</version>
-  	</dependency>
-  	<dependency>
-  		<groupId>org.jxls</groupId>
-  		<artifactId>jxls-poi</artifactId>
-  		<version>1.0.14</version>
-  	</dependency>
+	<dependency>
+   	 <groupId>org.apache.poi</groupId>
+   	 <artifactId>poi</artifactId>
+    	<version>3.7</version>
+	</dependency>
   </dependencies>
 </project>
